--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Western stories'
 - !lcc 'PS'
+- GITenberg
 title: With Hoops of Steel
 url: http://www.gutenberg.org/ebooks/28585
